Text, navbar, header, and footer addition

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <header>
+        <span>Carlos Alvira Natal</span>
+        <nav class="navbar">
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="portfolio.html">PORTFOLIO</a>
+        </nav>
+    </header>
+<main>
+    <h1>Fullstack Web Developer</h1>
+    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe enim iusto nemo, voluptas fugit nobis ad! Tempore, perspiciatis! Odio magnam odit et accusamus nobis autem tempora possimus est iusto ab.</h2>
+    <h3>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, explicabo expedita? Repellat culpa consectetur placeat rem nobis quaerat, totam beatae, vero distinctio soluta, eligendi sapiente unde itaque harum nam iste."<br> -A RANDOM CAT</h3>
+</main>
+<footer>
+    <a href="https://www.linkedin.com/in/carlos-alvira-natal/">LinkedIn</a>
+</footer>  
 </body>
 </html>
