Personalized text, image and included background.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     </header>
 <main>
     <h1>Fullstack Web Developer</h1>
-    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe enim iusto nemo, voluptas fugit nobis ad! Tempore, perspiciatis! Odio magnam odit et accusamus nobis autem tempora possimus est iusto ab.</h2>
-    <h3>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, explicabo expedita? Repellat culpa consectetur placeat rem nobis quaerat, totam beatae, vero distinctio soluta, eligendi sapiente unde itaque harum nam iste."<br> -A RANDOM CAT</h3>
+    <h2>Interested in web development with a focus in the eSports industry.</h2>
+    <h3>“Dwell on the beauty of life. Watch the stars, and see yourself running with them. Think constantly on the changes of the elements into each other, for such thoughts wash away the dust of earthly life.”<br> -Marcus Aurelius</h3>
+    <img src="images/Design_Greatness_Marcus_Aurelius_On_Horse.png" alt="Marcus Aurelius">
 </main>
 <footer>
     <a href="https://www.linkedin.com/in/carlos-alvira-natal/">LinkedIn</a>
