Added more CSS styling, and basic HTML & CSS work on the About page

--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="javascript.js"></script>
     <title>Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <span>Carlos Alvira Natal</span>
-        <nav class="navbar">
-            <a href="index.html">HOME</a>
-            <a href="about.html">ABOUT</a>
-            <a href="portfolio.html">PORTFOLIO</a>
-        </nav>
+      <span class="name">Carlos Alvira Natal</span>
+      <nav class="navbar">
+        <a style="text-decoration: underline" href="index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+      </nav>
     </header>
-<main>
-    <h1>Fullstack Web Developer</h1>
-    <h2>Interested in web development with a focus in the eSports industry.</h2>
-    <h3>“Dwell on the beauty of life. Watch the stars, and see yourself running with them. Think constantly on the changes of the elements into each other, for such thoughts wash away the dust of earthly life.”<br> -Marcus Aurelius</h3>
-    <img src="images/Design_Greatness_Marcus_Aurelius_On_Horse.png" alt="Marcus Aurelius">
-</main>
-<footer>
-    <a href="https://www.linkedin.com/in/carlos-alvira-natal/">LinkedIn</a>
-</footer>  
-</body>
+    <main>
+      <h1>Fullstack Web Developer</h1>
+      <h2>
+        Interested in web development with a focus in the eSports industry.
+      </h2>
+      <h3>
+        “Dwell on the beauty of life. Watch the stars, and see yourself running
+        with them. Think constantly on the changes of the elements into each
+        other, for such thoughts wash away the dust of earthly life.”<br />
+        -Marcus Aurelius
+      </h3>
+      <img class="marcus"
+        src="images/Design_Greatness_Marcus_Aurelius_On_Horse.png"
+        alt="Marcus Aurelius"
+      />
+    </main>
+    <footer>
+      <a href="https://www.linkedin.com/in/carlos-alvira-natal/">LinkedIn</a>
+    </footer>
+  </body>
 </html>
