--- a/about.html
+++ b/about.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="javascript.js"></script>
     <title>About</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <span class="name">Carlos Alvira Natal</span>
+      <nav class="navbar">
+        <a href="index.html">HOME</a>
+        <a style="text-decoration: underline" href="about.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+      </nav>
+    </header>
+    <main>
+        <h1> When I am not working, I'm doing the following things. </h1>
+        <section>
+            <h2> Rock Climbing </h2>
+            <img class="climbing" src="images/Aidan-Roberts-Burden-of-Dreams.jpg" alt="Burden of Dream Boulder">
+            <p> I love rock climbing</p>
+        </section>
+    </main>
+    <footer>
+      <a href="https://www.linkedin.com/in/carlos-alvira-natal/">LinkedIn</a>
+    </footer>
+  </body>
 </html>
