Finished About page and updated CSS.

--- a/about.html
+++ b/about.html
@@ -18,12 +18,29 @@
       </nav>
     </header>
     <main>
-        <h1> When I am not working, I'm doing the following things. </h1>
-        <section>
-            <h2> Rock Climbing </h2>
-            <img class="climbing" src="images/Aidan-Roberts-Burden-of-Dreams.jpg" alt="Burden of Dream Boulder">
-            <p> I love rock climbing</p>
-        </section>
+      <h1>When I am not working, I'm doing the following things.</h1>
+      <section>
+        <h2>Rock Climbing</h2>
+        <img
+          class="climbing"
+          src="images/Aidan-Roberts-Burden-of-Dreams.jpg"
+          alt="Burden of Dream Boulder"
+        />
+        <p>
+          I love rock climbing! I started climbing in Novemeber of 2022 and have
+          never looked back. I take training very seriously and my goal is to be
+          as strong as Ai Mori!
+        </p>
+      </section>
+      <section>
+        <h2>Gaming</h2>
+        <img
+          class="gaming"
+          src="images/02_Summoner_s_Rift_hi182k3q611izhk9dbql.jpg"
+          alt=""
+        />
+        <p style="padding-left: 15px;"> I have played games for as long as I can remember. I used to play CoD at a high-level, but now I spend my time in Summmoner's Rift. </p>
+        <p style="padding-left: 15px;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quia iure officiis facilis fugit. Sint libero voluptatum, dolorum non quo magnam hic deserunt incidunt quae consequuntur perspiciatis labore tempora quaerat? </p>
     </main>
     <footer>
       <a href="https://www.linkedin.com/in/carlos-alvira-natal/">LinkedIn</a>
