Finished Portfolio page, and added JS.

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,25 @@
     <script src="javascript.js"></script>
     <title>Portfolio</title>
 </head>
-<body>
-    
-</body>
+<header>
+    <span class="name">Carlos Alvira Natal</span>
+    <nav class="navbar">
+      <a href="index.html">HOME</a>
+      <a href="about.html">ABOUT</a>
+      <a style="text-decoration: underline" href="portfolio.html">PORTFOLIO</a>
+    </nav>
+  </header>
+  <main>
+   <h1> Things I have built!</h1>
+   <section>
+    <h2>First Project</h2>
+    <img class="project1" src="images/a5120e999e08b532e22d9976613ccfdc.png" alt="Procjet">
+    <p style="padding-left: 10px";> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quo minima eius cumque, quos aut! Deserunt sequi quasi consequuntur animi odio beatae consectetur quo doloremque ratione corrupti. Animi, ipsa tempore.</p>
+    <p style="padding-left: 10px";> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam reprehenderit rem aspernatur animi accusamus impedit nihil, velit maxime laudantium voluptate. Minima dignissimos dolorem commodi suscipit eum consequuntur natus quo illo?</p>
+    <p style="padding-left: 10px";> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium ad et eligendi quasi suscipit ipsa ut itaque atque ullam, pariatur laudantium adipisci, provident numquam quia tempore reprehenderit tempora voluptate assumenda.</p>
+</section>
+  </main>
+  <footer>
+    <a href="https://www.linkedin.com/in/carlos-alvira-natal/">LinkedIn</a>
+  </footer>
 </html>
