--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap"
+      rel="stylesheet"
+    />
     <script src="javascript.js"></script>
     <title>Home</title>
   </head>
@@ -28,7 +40,8 @@
         other, for such thoughts wash away the dust of earthly life.”<br />
         -Marcus Aurelius
       </h3>
-      <img class="marcus"
+      <img
+        class="marcus"
         src="images/Design_Greatness_Marcus_Aurelius_On_Horse.png"
         alt="Marcus Aurelius"
       />
